# rs_ray_tracer

./: .gitignore  Cargo.toml  readme.md  result.ppm
assets/test_box/: test_box.ply
docs/: notes.md
results/: result_2.ppm  result_3.ppm  result_4.ppm  result_5.ppm
src/: bounding_box.rs  box_obj.rs  bvh.rs  camera.rs  colour.rs  constant_medium.rs  hittable.rs  lib.rs  main.rs  material.rs  moving_sphere.rs  perlin.rs  ray.rs  rectangle.rs  render.rs  resolution.rs  sphere.rs  texture.rs  utilities.rs  vec3d.rs
src/bvh/: bounding_box.rs  bvh.rs  mod.rs
src/hittable/: hit_record.rs  hittable.rs  hittable_list.rs  hittable_list_dyn.rs  hittable_list_rectangle.rs  hittable_list_triangle.rs  mod.rs
src/instances/: mod.rs  rotate_x.rs  rotate_y.rs  rotate_z.rs  scale.rs  translate.rs
src/materials/: dielectric.rs  diffuse.rs  diffuse_light.rs  isotropic.rs  lambertian.rs  material.rs  metal.rs  mod.rs
src/objects/: box_obj.rs  mod.rs  model.rs  moving_sphere.rs  pyramid.rs  rectangle.rs  sphere.rs  triangle.rs
src/textures/: checker_texture.rs  image_texture.rs  mod.rs  noise_texture.rs  perlin.rs  solid_colour.rs  texture.rs  turbulence_texture.rs
src/volumes/: constant_medium.rs
