[package]
name = "rs_ray_tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.5"
indicatif = "0.17.3"
rand = "0.8.5"
rayon = "1.10.0"

[profile.release]
# Set debug to true when profiling the code
debug = false
